[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )
current = true

[node name="TabContainer" type="Node2D" parent="."]
position = Vector2( 100, 230 )

[node name="UiContainer" type="Node2D" parent="."]

[node name="sb_byNumber" type="SpinBox" parent="UiContainer"]
margin_left = 104.0
margin_top = 58.0
margin_right = 178.0
margin_bottom = 82.0
max_value = 10000.0
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sb_byDistance" type="SpinBox" parent="UiContainer"]
margin_left = 239.0
margin_top = 58.0
margin_right = 313.0
margin_bottom = 82.0
max_value = 10000.0
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cb_byNumber" type="CheckBox" parent="UiContainer"]
margin_left = 78.0
margin_top = 29.0
margin_right = 178.0
margin_bottom = 53.0
text = "By Number"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cb_byDistance" type="CheckBox" parent="UiContainer"]
margin_left = 212.0
margin_top = 29.0
margin_right = 316.0
margin_bottom = 53.0
text = "By Distance"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="UiContainer"]
margin_left = 535.0
margin_top = 24.0
margin_right = 838.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="UiContainer/VBoxContainer2"]
margin_right = 312.0
margin_bottom = 14.0
text = "Auto Tab Insertion Mode"

[node name="cb_tabInsertMode1" type="CheckBox" parent="UiContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 312.0
margin_bottom = 42.0
hint_tooltip = "Automatic insertion is unaware of manually inserted tabs."
text = "Auto unaware of manual"

[node name="cb_tabInsertMode2" type="CheckBox" parent="UiContainer/VBoxContainer2"]
margin_top = 46.0
margin_right = 312.0
margin_bottom = 70.0
hint_tooltip = "Automatic insertion is aware of manually
inserted tabs and only inserts the remainder.
Spacing calculations use the reduced tab count."
text = "Auto aware of manual, standard spacing calc"

[node name="cb_tabInsertMode3" type="CheckBox" parent="UiContainer/VBoxContainer2"]
margin_top = 74.0
margin_right = 312.0
margin_bottom = 98.0
hint_tooltip = "Automatic insertion is aware of manually
inserted tabs and only inserts the remainder.
Spacing calculations use the full tab count."
text = "Auto aware of manual, modified spacing calc"

[node name="VBoxContainer" type="VBoxContainer" parent="UiContainer"]
margin_left = 357.0
margin_top = 24.0
margin_right = 451.0
margin_bottom = 100.0
custom_constants/separation = 8

[node name="btn_clearManual" type="Button" parent="UiContainer/VBoxContainer"]
margin_right = 135.0
margin_bottom = 20.0
text = "Clear Manual Tabs"

[node name="btn_clearAuto" type="Button" parent="UiContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 135.0
margin_bottom = 48.0
text = "Clear Auto Tabs"

[node name="btn_clearAllTabs" type="Button" parent="UiContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 135.0
margin_bottom = 76.0
text = "Clear All Tabs"

[node name="btn_clearNoTabZones" type="Button" parent="UiContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 135.0
margin_bottom = 104.0
text = "Clear No Tab Zones"

[node name="btn_clearEverything" type="Button" parent="UiContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 135.0
margin_bottom = 132.0
text = "Clear Everything"

[connection signal="value_changed" from="UiContainer/sb_byNumber" to="." method="_on_sb_byNumber_value_changed"]
[connection signal="value_changed" from="UiContainer/sb_byDistance" to="." method="_on_sb_byDistance_value_changed"]
[connection signal="toggled" from="UiContainer/cb_byNumber" to="." method="_on_cb_byNumber_toggled"]
[connection signal="toggled" from="UiContainer/cb_byDistance" to="." method="_on_cb_byDistance_toggled"]
[connection signal="pressed" from="UiContainer/VBoxContainer2/cb_tabInsertMode1" to="." method="_on_cb_tabInsertMode1_pressed"]
[connection signal="pressed" from="UiContainer/VBoxContainer2/cb_tabInsertMode2" to="." method="_on_cb_tabInsertMode2_pressed"]
[connection signal="pressed" from="UiContainer/VBoxContainer2/cb_tabInsertMode3" to="." method="_on_cb_tabInsertMode3_pressed"]
[connection signal="pressed" from="UiContainer/VBoxContainer/btn_clearManual" to="." method="_on_btn_clearManual_pressed"]
[connection signal="pressed" from="UiContainer/VBoxContainer/btn_clearAuto" to="." method="_on_btn_clearAuto_pressed"]
[connection signal="pressed" from="UiContainer/VBoxContainer/btn_clearAllTabs" to="." method="_on_btn_clearAllTabs_pressed"]
[connection signal="pressed" from="UiContainer/VBoxContainer/btn_clearNoTabZones" to="." method="_on_btn_clearAllNoTabZones_pressed"]
[connection signal="pressed" from="UiContainer/VBoxContainer/btn_clearEverything" to="." method="_on_btn_clearEverything_pressed"]
